Tue Feb 11 13:31:49 1997  Richard Basch  <basch@lehman.com>

	* com_err.c: If the application is a console application, simply
		display the message to stderr. (win32)

Mon Feb 10 21:30:41 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* com_err.c, com_err.h (com_err_va): Fix broken Windows 16
		declaration.  (Should be KRB5_CALLCONV, and using ET_P)

Fri Feb  7 22:10:23 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* compile_et.c: Change the emitted name of the struct error_table
 		to be et_XXX_error_table, instead of it being a static
 		variable named "et".  (This change has already been made
		in the awk versions of compile_et.)

	* com_err.h, com_err.c: Remove the void *priv argument from
 		com_err_va() and et_com_err() experimental API's.  (That
 		was a braino; the private data pointer should come from
 		the hook_func_data field.)

Fri Feb  7 19:03:07 1997  Richard Basch  <basch@lehman.com>

	* com_err.c com_err.h: Added old interface function com_err_va

Tue Feb  4 15:59:01 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in com_err.h error_table.h et_c.awk error_message.c
		Corrected various declarations for Windows build

Wed Jan 29 17:32:23 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Add rules to build test_et (for testing!)

	* com_err.h, error_table.h: Fixed up varargs/stdargs declarations
		Move definition of struct error_table into com_err.h, and 
		define first draft of the V2 API.  Removed the Windows
		specific declarations from error_table.h, since it's now
		safe to 

	* com_err.c, error_message.c, init_et.c, et_name.c: Added new
		V2 API's.  Cleaned up C code.  

	* test_et.c: Added new test case for error code 0

	* et_c.awk: Added __far for Windows 16 pointer.

	* internal.h: File removed, no longer used.

	* error_table.y: Add #include the header file "com_err.h"

Thu Nov 21 11:55:16 EST 1996    Richard Basch   <basch@lehman.com>

        * Makefile.in: win32 build
	* com_err.h error_table.h init_et.c internal.h